# wacruit-server

./: .coderabbit.yaml  .env.dev  .env.memo  .env.prod  .env.test  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  alembic.ini  check.py  example.py  memo  pyproject.toml  register_user.py  response.json  test.py  test_delete_portfolio.py  test_get_portfolio.py  test_upload_portfolio.py  test_upload_url.py  test_url_api.py
.github/: CODEOWNERS
.github/workflows/: deploy-dev.yaml  deploy-prod.yaml  test.yaml
test/: check_vault_bucket_name.py  oci_s3_connection_test.py
wacruit/src/: app.py  main.py  secrets.py  settings.py
wacruit/src/admin/: __init__.py  applications.py  auth.py  config.py  formatters.py  middlewares.py  views.py
wacruit/src/api/: connections.py
wacruit/src/api/schemas/: __init__.py  judge.py
wacruit/src/apps/: router.py
wacruit/src/apps/announcement/: exceptions.py  models.py  repositories.py  schemas.py  services.py  views.py
wacruit/src/apps/auth/: __init__.py  exceptions.py  models.py  repositories.py  schemas.py  services.py  views.py
wacruit/src/apps/common/: dependencies.py  enums.py  exceptions.py  languages.json  schemas.py  security.py  sql.py
wacruit/src/apps/dummy/: repositories.py
wacruit/src/apps/faq/: exceptions.py  models.py  repositories.py  schemas.py  services.py  views.py
wacruit/src/apps/history/: exceptions.py  models.py  repositories.py  schemas.py  services.py  views.py
wacruit/src/apps/hodu/: config.py  connections.py  repositories.py  schemas.py
wacruit/src/apps/judge/: __init__.py  config.py  connections.py  repositories.py  schemas.py
wacruit/src/apps/mail/: config.py  exceptions.py  services.py
wacruit/src/apps/member/: exceptions.py  models.py  repositories.py  schemas.py  services.py  views.py
wacruit/src/apps/portfolio/: __init__.py  exceptions.py  schemas.py  services.py  views.py
wacruit/src/apps/pre_registration/: exceptions.py  models.py  repositories.py  schemas.py  services.py  views.py
wacruit/src/apps/problem/: __init__.py  exceptions.py  models.py  repositories.py  repositories_v2.py  schemas.py  schemas_v2.py  services.py  services_v2.py  utils.py  utils_v2.py  views.py  views_v2.py
wacruit/src/apps/project/: __init__.py  exceptions.py  models.py  repositories.py  schemas.py  services.py  views.py
wacruit/src/apps/recruiting/: __init__.py  exceptions.py  models.py  repositories.py  schemas.py  services.py  views.py  views_v3.py
wacruit/src/apps/recruiting_info/: exceptions.py  models.py
wacruit/src/apps/resume/: exceptions.py  models.py  repositories.py  schemas.py  services.py  views.py
wacruit/src/apps/review/: exceptions.py  models.py  repositories.py  schemas.py  services.py  views.py
wacruit/src/apps/seminar/: exceptions.py  models.py  repositories.py  schemas.py  services.py  views.py
wacruit/src/apps/sponsor/: __init__.py  exceptions.py  models.py  views.py  (+3 more)
wacruit/src/database/: __init__.py  base.py  config.py  connection.py
wacruit/src/tests/: conftest.py
wacruit/src/utils/: middlewares.py  mixins.py
(+151 files in other folders)
